--- a/Student_Dashboard.html
+++ b/Student_Dashboard.html
@@ -69,6 +69,15 @@
         tbody tr:nth-child(even) {
             background-color: #f2f2f2;
         }
+		
+		#Cons {
+			background-color: #800080;
+			color: #fff;
+			text-align:center;
+			width: 80px;
+			padding: 8px;
+			border-radius: 10px;
+		}
     </style>
 </head>
 <body>
@@ -77,6 +86,7 @@
         <ul>
             <li><a href="Student_Dashboard.html">Students</a></li>
             <li><a href="Student_tutor.html">Student Tutor</a></li>
+			<li id="Cons"><a href="#">Request Consultation</a></li>
         </ul>
     </header>
     <main>
@@ -86,10 +96,14 @@
                 <thead>
                     <tr>
                         <th>Student ID</th>
-                        <th>Student Name</th>
-                        <th>Student Email</th>
+                        <th>Name</th>
+                        <th>Email</th>
                         <th>Dept</th>
+						<th>Semester</th>
+						<th>Course</th>
                         <th>Section</th>
+						<th>Assigned Faculty</th>
+						<th>Available ST</th>
                     </tr>
                 </thead>
                 <tbody>
