--- a/Student_tutor.html
+++ b/Student_tutor.html
@@ -86,8 +86,8 @@
                 <thead>
                     <tr>
                         <th>Student ID</th>
-                        <th>Student Name</th>
-                        <th>Student Email</th>
+                        <th>Name</th>
+                        <th>Email</th>
                         <th>Dept</th>
 						<th>Section</th>
 						<th>ST ID</th>
