--- a/St Student_dashboard.html
+++ b/St Student_dashboard.html
@@ -65,6 +65,10 @@
 <body>
     <header>
         <h1>BRACU Interactive Consutation</h1>
+		<ul>
+            
+			<a href="Student_tutor_Dashboard.html" class="Con">Student Tutor View</a>
+		</ul>
     </header>
     <main>
         <div class="profile">
