--- a/Student_tutor_Dashboard.html
+++ b/Student_tutor_Dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Profile</title>
+    <title>Student Tutor Profile</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,6 +65,10 @@
 <body>
     <header>
         <h1>BRACU Interactive Consutation</h1>
+		<ul>
+            <a href="St Student_dashboard.html" class="Con">Student View</a>
+			
+		</ul>
     </header>
     <main>
         <div class="profile">
@@ -106,34 +110,11 @@
 					<option value="5">5</option>
 					<option value="6">6</option>
 				</select>
+				
             </div>
-			<div class="profile-info">
-				<label for="preferredDay">Preferred Day for Consultation:</label>
-				<select id="preferredDay" name="preferredDay">
-					<option value="Saturday">Saturday</option>
-					<option value="Sunday">Sunday</option>
-					<option value="Monday">Monday</option>
-					<option value="Tuesday">Tuesday</option>
-					<option value="Wednesday">Wednesday</option>
-					<option value="Thursday">Thursday</option>
-				</select>
-			</div>
-			<div class="profile-info">
-				<label for="preferredTime">Choose Time for Consultation:</label>
-				<select id="preferredTime" name="preferredTime">
-					<option value="8-9:00">8:00 - 9:00</option>
-					<option value="9:30-10:30">9:30 - 10:30</option>
-					<option value="11-12">11:00 - 12:00</option>
-					<option value="12:30-1:30">12:30 - 1:30</option>
-					<option value="2-3">2:00 - 3:00</option>
-					<option value="3:30-4:30">3:30 - 4:30</option>
-				</select>
-			</div>
-			
 			<ul>
-            <a href="Sign up - Interactive Consultation.html" class="Con">Request Consultation</a>
-			<a href="previous.html" class="Con">Previous Consultaion</a>
-			<a href="#" class="Con">Available Faculty</a>
+            <a href="#" class="Con">Requests</a>
+			<a href="#" class="Con">Previous Consultaion</a>
 			</ul>
         </div>
     </main>
