--- a/Consultation/consultation.html
+++ b/Consultation/consultation.html
@@ -17,13 +17,17 @@
     <header>
       <nav>
         <div class="nav_logo">
-          <h1><a href="Login.html">Interactive Consultation System | ICS </a></h1>
+          <h1><a href="Faculty.html">Interactive Consultation System | ICS </a></h1>
         </div>
-        <ul class="nav_link">
-          <li><a href="#">Students</a></li>
-          <li><a href="#">Teachers</a></li>
-        </ul>
       </nav>
+      <ul class="nav_link">
+        <li><a href="#">Student Dashboard</a></li>
+        <li><a href="#">Teacher Dashboard</a></li>
+        <li><a href="#">ST Dashboard</a></li>
+      </ul>
+      <div id='logout'>
+        <button type="button" class="btn-danger">Logout</button>
+      </div>
     </header>
     <main>
       <section class="Consulting Dashboard">
@@ -39,9 +43,9 @@
                 <a href = "ongoingConso.html">Ongoing Consultations</a>
                 <br><br>
 
-              <p>My reviews: </p><br>
+              <p>My reviews: </p><br> <!--Backend Fetch from feedback-->
 
-              <p>Total Consulted Hours: </p><br>
+              <p>Total Consulted Hours: </p><br> <!--Backend Fetch from Consultations-->
 
             </label>
             <br>
