--- a/Consultation/previous.html
+++ b/Consultation/previous.html
@@ -20,9 +20,13 @@
           <h1><a href="Login.html">Interactive Consultation System | ICS </a></h1>
         </div>
         <ul class="nav_link">
-          <li><a href="#">Students</a></li>
-          <li><a href="#">Teachers</a></li>
+          <li><a href="#">Student Dashboard</a></li>
+          <li><a href="#">Teacher Dashboard</a></li>
+          <li><a href="#">ST Dashboard</a></li>
         </ul>
+        <div id='logout'>
+          <button type="button" class="btn-danger">Logout</button>
+        </div>
       </nav>
     </header>
     <main>
