--- a/Consultation/consultation.html
+++ b/Consultation/consultation.html
@@ -2,58 +2,124 @@
 <!-- <User Authentication checked from the url where UserID = xx 
       For user ID starting with 1> -->
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"> <!-- Tab er upore logo 40x40 px -->
     <title>Consulting Dashboard</title>
-  </head>
-  <body>
-    <header>
-      <nav>
+    <style>
+        body {
+            background-color: #e0f7fa; /* Sky blue background */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #007bff; /* Darker sky blue for header */
+            color: white;
+            padding: 10px 20px;
+        }
+
+        .nav_logo h1 {
+            margin: 0;
+        }
+
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .nav_link {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        .nav_link li {
+            margin-right: 20px;
+        }
+
+        .Consulting_Dashboard {
+            background-color: white;
+            padding: 20px;
+            margin: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .Previous {
+            margin-bottom: 20px;
+        }
+
+        .reviews {
+            background-color: #f0f0f0; /* Light gray background for reviews */
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        .btn-danger {
+            background-color: #f44336; /* Red color for logout button */
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .btn-danger:hover {
+            background-color: #d32f2f; /* Darker red on hover */
+        }
+    </style>
+</head>
+<body>
+<header>
+    <nav>
         <div class="nav_logo">
-          <h1><a href="Faculty.html">Interactive Consultation System | ICS </a></h1>
+            <h1><a href="Faculty.html">Interactive Consultation System | ICS </a></h1>
         </div>
-      </nav>
-      <ul class="nav_link">
-        <li><a href="#">Student Dashboard</a></li>
-        <li><a href="#">Teacher Dashboard</a></li>
-        <li><a href="#">ST Dashboard</a></li>
-      </ul>
-      <div id='logout'>
-        <button type="button" class="btn-danger">Logout</button>
-      </div>
-    </header>
-    <main>
-      <section class="Consulting Dashboard">
+        <ul class="nav_link">
+            <li><a href="#">Student Dashboard</a></li>
+            <li><a href="#">Teacher Dashboard</a></li>
+            <li><a href="#">ST Dashboard</a></li>
+        </ul>
+        <div id='logout'>
+            <button type="button" class="btn-danger">Logout</button>
+        </div>
+    </nav>
+</header>
+<main>
+    <section class="Consulting Dashboard">
         <div class="Consulting_Dashboard">
-          <form action="action_page.php" style="border:1px solid #ccc">
-            <div class="container">
-              <h1>Consultation Information</h1>
-              <p>Manage all your consultation here</p>
-              <hr><br>
+            <form action="action_page.php" style="border:1px solid #ccc">
+                <div class="container">
+                    <h1>Consultation Information</h1>
+                    <p>Manage all your consultation here</p>
+                    <hr><br>
 
-              <div class="Previous Consultations">
-                <a href = "previous.html">Previous Consultations</a><br>
-                <a href = "ongoingConso.html">Ongoing Consultations</a>
-                <br><br>
+                    <div class="Previous Consultations">
+                        <a href="previous.html">Previous Consultations</a><br>
+                        <a href="ongoingConso.html">Ongoing Consultations</a>
+                        <br><br>
 
-              <p>My reviews: </p><br>
-              <div class="reviews">
-                <!-- Fetch and display review data from the backend -->
-                <!-- m = query('select round(avg(rating), 2) as myReviews from feedback where user_id = ?', [user_id])  -->
-                
-              </div>
+                        <p>My reviews: </p><br>
+                        <div class="reviews">
+                            <!-- Fetch and display review data from the backend -->
+                            <!-- m = query('select round(avg(rating), 2) as myReviews from feedback where user_id = ?', [user_id])  -->
 
-              <p>Total Consulted Hours: </p><br> <!--Backend Fetch from Consultations where SQL is used with query like : 
+                        </div>
+
+                        <p>Total Students Consulted : </p><br> <!--Backend Fetch from Consultations where SQL is used with query like : 
                                                   SELECT SUM(DIFFiference of Start time - end time )) FROM Consultation WHERE USER_ID= XX XX  -->
 
-            </label>
-            <br>
-              </div>
-            </div>
-          </form>
-
-      </section>
-    </main>
-  </body>
+                        </label>
+                        <br>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+</main>
+</body>
 </html>
