--- a/Consultation/consultation.html
+++ b/Consultation/consultation.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- <User Authentication checked from the url where UserID = xx 
       For user ID starting with 1> -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
@@ -84,15 +85,17 @@
             <li><a href="#">Teacher Dashboard</a></li>
             <li><a href="#">ST Dashboard</a></li>
         </ul>
+        
         <div id='logout'>
             <button type="button" class="btn-danger">Logout</button>
         </div>
+
     </nav>
 </header>
 <main>
     <section class="Consulting Dashboard">
         <div class="Consulting_Dashboard">
-            <form action="action_page.php" style="border:1px solid #ccc">
+            <form action="consultation.php" style="border:1px solid #ccc">
                 <div class="container">
                     <h1>Consultation Information</h1>
                     <p>Manage all your consultation here</p>
